[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/TROTTENET - Tileset Space.png" type="Texture" id=1]
[ext_resource path="res://Assets/TROTTENET - Background_Space_Layer3.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Levels/Level2.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Countdown.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/TROTTENET - Background_Space_Layer2.png" type="Texture" id=5]
[ext_resource path="res://Assets/TROTTENET - Background_Space_Layer1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Buttons/TROTTENET - Optionsbutton Pr.png" type="Texture" id=7]
[ext_resource path="res://Assets/Buttons/TROTTENET - Optionsbutton.png" type="Texture" id=8]
[ext_resource path="res://Items/SpeedBoost.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Timer.tscn" type="PackedScene" id=10]
[ext_resource path="res://Items/FinishLine.tscn" type="PackedScene" id=11]
[ext_resource path="res://Items/Ramp.tscn" type="PackedScene" id=12]
[ext_resource path="res://Items/Portal.tscn" type="PackedScene" id=13]

[sub_resource type="InputEventAction" id=1]
action = "Esc"
pressed = true

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 12, 0, 12 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 12, 0, 12 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 12, 0, 12 )

[sub_resource type="TileSet" id=6]
0/name = "TROTTENET - Tileset Space.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 24 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "TROTTENET - Tileset Space.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 48, 0, 32, 24 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 4 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "TROTTENET - Tileset Space.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 0, 16, 24 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 5 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 2721.03, 10 )

[node name="Level2" type="Node2D" groups=[
"Level",
]]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Countdown" parent="CanvasLayer" instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -32.0
margin_right = 20.0
margin_bottom = 32.0

[node name="Options" type="TextureButton" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -18.0
margin_bottom = 18.0
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" parent="CanvasLayer" instance=ExtResource( 10 )]
margin_left = 43.0
margin_top = 14.0
margin_right = 83.0
margin_bottom = 28.0

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 6 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -327664, 0, 0, -327662, 1, 0, 65529, 0, 0, 65531, 2, 0, 65532, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 22, 2, 0, 23, 2, 0, 24, 2, 0, 25, 2, 0, 26, 2, 0, 27, 2, 0, 28, 2, 0, 29, 2, 0, 30, 2, 0, 31, 2, 0, 32, 2, 0, 33, 2, 0, 34, 2, 0, 35, 2, 0, 36, 2, 0, 37, 2, 0, 38, 2, 0, 39, 2, 0, 40, 2, 0, 41, 2, 0, 42, 2, 0, 43, 2, 0, 44, 2, 0, 45, 2, 0, 46, 2, 0, 47, 2, 0, 48, 2, 0, 49, 2, 0, 50, 2, 0, 51, 2, 0, 52, 2, 0, 53, 2, 0, 54, 2, 0, 55, 2, 0, 56, 2, 0, 57, 2, 0, 58, 2, 0, 59, 2, 0, 60, 2, 0, 61, 2, 0, 62, 2, 0, 63, 2, 0, 64, 2, 0, 65, 2, 0, 66, 2, 0, 67, 2, 0, 68, 2, 0, 69, 2, 0, 70, 2, 0, 71, 2, 0, 72, 2, 0, 73, 2, 0 )

[node name="ParralaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="Forest1" type="ParallaxLayer" parent="ParralaxBackground"]
motion_scale = Vector2( 0.06, 0.06 )
motion_mirroring = Vector2( 400, 0 )

[node name="Sprite" type="Sprite" parent="ParralaxBackground/Forest1"]
position = Vector2( 0.235962, 80 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -325 )

[node name="Forest2" type="ParallaxLayer" parent="ParralaxBackground"]
motion_scale = Vector2( 0.08, 0.08 )
motion_mirroring = Vector2( 400, 0 )

[node name="Sprite" type="Sprite" parent="ParralaxBackground/Forest2"]
position = Vector2( 0, 80 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( 0, -325 )

[node name="Forest3" type="ParallaxLayer" parent="ParralaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )

[node name="Sprite" type="Sprite" parent="ParralaxBackground/Forest3"]
position = Vector2( 28, 91.2653 )
texture = ExtResource( 6 )
centered = false
offset = Vector2( 0, -325 )

[node name="CharacterPosition" type="Position2D" parent="."]
position = Vector2( 58, -20 )

[node name="Items" type="Node2D" parent="."]

[node name="AsteroidTimer" type="Timer" parent="Items"]
wait_time = 4.0
autostart = true

[node name="SpeedBoost" parent="Items" instance=ExtResource( 9 )]
position = Vector2( 183.819, -1.18179 )

[node name="SpeedBoost2" parent="Items" instance=ExtResource( 9 )]
position = Vector2( 345.02, -1.19165 )

[node name="SpeedBoost3" parent="Items" instance=ExtResource( 9 )]
position = Vector2( 581.083, -1.19165 )

[node name="SpeedBoost4" parent="Items" instance=ExtResource( 9 )]
position = Vector2( 757.035, -1.19165 )

[node name="FinishLine" parent="Items" instance=ExtResource( 11 )]
position = Vector2( 3665.04, -58.5 )
look = 1

[node name="Ramp" parent="Items" instance=ExtResource( 12 )]
position = Vector2( 937.229, -7.03868 )
look = 1

[node name="Ramp2" parent="Items" instance=ExtResource( 12 )]
position = Vector2( 510.875, -414.056 )
look = 1

[node name="Ramp3" parent="Items" instance=ExtResource( 12 )]
position = Vector2( 562.917, -413.338 )
look = 1

[node name="Ramp4" parent="Items" instance=ExtResource( 12 )]
position = Vector2( 642.405, -419.826 )
look = 1

[node name="Ramp5" parent="Items" instance=ExtResource( 12 )]
position = Vector2( 700.405, -407.826 )
look = 1

[node name="Portal" parent="Items" instance=ExtResource( 13 )]
position = Vector2( 389.155, -403.031 )

[node name="SaveArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SaveArea"]
position = Vector2( 345.26, 74.6078 )
shape = SubResource( 7 )

[connection signal="pressed" from="CanvasLayer/Options" to="." method="_on_Options_pressed"]
[connection signal="timeout" from="Items/AsteroidTimer" to="." method="_on_AsteroidTimer_timeout"]
[connection signal="body_entered" from="Items/FinishLine" to="." method="_on_FinishLine_body_entered"]
[connection signal="area_entered" from="Items/Portal" to="." method="_on_Portal_area_entered"]
[connection signal="area_entered" from="SaveArea" to="." method="_on_SaveArea_area_entered"]
